# tap-newstore

./: .env.example  README.md  meltano.yml  pyproject.toml
tap_newstore/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
